<resources>
    <string name="app_name" translatable="false">BiteNote</string>
    <string name="recipe">Recipe</string>
    <string name="home_activity_label">Home</string>
    <string name="recipe_query_activity_label">Filter Recipes</string>
    <string name="home_make_query_button_description">Make query button</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="recipe_example_name">My Example Recipe</string>
    <string name="example_date" translatable="false">1970-01-01</string>
    <string name="recipe_card_diners_label">"Diners: "</string>
    <string name="recipe_card_budget_label">"Budget: "</string>
    <string name="read_recipe_activity_label">Read Recipe</string>
    <string name="write_recipe_activity_label">Edit/Write Recipe</string>
    <string name="recipe_name_hint">Recipe name</string>
    <string name="recipe_body_hint">Recipe body</string>
    <string name="edit_recipe_properties_activity_label">Edit Recipe Properties</string>
    <string name="edit_recipe_properties_budget_label">Budget:</string>
    <string name="edit_recipe_properties_diners_label">Diners:</string>
    <string name="edit_recipe_ingredients_button_text">EDIT INGREDIENTS</string>
    <string name="edit_recipe_utensils_button_text">EDIT UTENSILS</string>
    <string name="home_long_click_dialog_title">Alert</string>
    <string name="home_long_click_dialog_body">Do you want to delete the recipe: %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_long_click_dialog_positive_toast">Deleted recipe: %s</string>
    <string name="home_long_click_dialog_negative_toast">Recipe deletion cancelled</string>
    <string name="edit_recipe_ingredients_activity_label">Edit Recipe Ingredients</string>
    <string name="edit_recipe_utensils_activity_label">Edit Recipe Utensils</string>
    <string name="weight_measurement" translatable="false">g</string>
    <string name="volume_measurement" translatable="false">mL</string>
    <string name="units_measurement">units</string>
    <string name="currency_symbol">$</string>
    <string name="number_with_currency">$%d</string>
    <string name="ingredient_example_name">Ingredient name</string>
    <string name="utensil_example_name">Utensil name</string>
    <string name="in_recipe_utensils_label">Utensils in the recipe:</string>
    <string name="in_recipe_ingredients_label">Ingredients in the recipe:</string>
    <string name="available_ingredients">Available ingredients:</string>
    <string name="available_utensils">Available utensils:</string>
    <string name="ingredient_query_activity_label">Filter Ingredients</string>
    <string name="utensil_query_activity_label">Filter Utensils</string>
    <string name="included_utensils_label">Included utensils:</string>
    <string name="included_ingredients_label">Included ingredients:</string>
    <string name="banned_utensils_label">Banned utensils:</string>
    <string name="banned_ingredients_label">Banned ingredients:</string>
    <string name="view_query_activity_label">Filtered Recipes</string>
    <string name="budget_edit_text_hint">Recipe\'s budget</string>
    <string name="max_budget_edit_text_hint">Max budget.</string>
    <string name="ingredients_saved_toast">Ingredients saved</string>
    <string name="utensils_saved_toast">Utensils saved</string>
    <string name="recipe_saved_toast">Saved recipe: %s</string>
    <string name="properties_saved_toast">Properties saved</string>
    <string name="ingredient_meat_red_beef">Beef</string>
    <string name="ingredient_meat_red_lamb">Lamb</string>
    <string name="ingredient_meat_red_venison">Venison</string>
    <string name="ingredient_meat_white_chicken">Chicken</string>
    <string name="ingredient_meat_white_rabbit">Rabbit</string>
    <string name="ingredient_meat_white_turkey">Turkey</string>
    <string name="ingredient_meat_white_piggy">Piggy</string>
    <string name="ingredient_meat_white_pork">Pork</string>
    <string name="ingredient_meat_game_duck">Duck</string>
    <string name="ingredient_meat_game_goose">Goose</string>
    <string name="ingredient_meat_game_quail">Quail</string>
    <string name="ingredient_dairy_cheese_cheddar">Cheddar</string>
    <string name="ingredient_dairy_cheese_mozzarella">Mozzarella</string>
    <string name="ingredient_dairy_cheese_parmesan">Parmesan</string>
    <string name="ingredient_dairy_cheese_brie">Brie</string>
    <string name="ingredient_dairy_cheese_blue">Blue cheese</string>
    <string name="ingredient_dairy_cheese_gouda">Gouda</string>
    <string name="ingredient_dairy_milk_whole">Whole milk</string>
    <string name="ingredient_dairy_milk_semiSkim">Semi skim milk</string>
    <string name="ingredient_dairy_milk_skim">Skim milk</string>
    <string name="ingredient_dairy_milk_almond">Almond milk</string>
    <string name="ingredient_dairy_milk_soy">Soy milk</string>
    <string name="ingredient_vegetable_leafyGreen_spinach">Spinach</string>
    <string name="ingredient_vegetable_leafyGreen_kale">Kale</string>
    <string name="ingredient_vegetable_leafyGreen_lettuce">Lettuce</string>
    <string name="ingredient_vegetable_leafyGreen_arugula">Arugula</string>
    <string name="ingredient_vegetable_root_carrot">Carrot</string>
    <string name="ingredient_vegetable_root_potato">Potato</string>
    <string name="ingredient_vegetable_root_beetroot">Beetroot</string>
    <string name="ingredient_vegetable_root_radish">Radish</string>
    <string name="ingredient_vegetable_cruciferous_broccoli">Broccoli</string>
    <string name="ingredient_vegetable_cruciferous_cauliflower">Cauliflower</string>
    <string name="ingredient_vegetable_cruciferous_cabbage">Cabbage</string>
    <string name="ingredient_vegetable_cruciferous_brusselsSprouts">Brussels sprouts</string>
    <string name="ingredient_fruit_citrus_orange">Orange</string>
    <string name="ingredient_fruit_citrus_lemon">Lemon</string>
    <string name="ingredient_fruit_citrus_lime">Lime</string>
    <string name="ingredient_fruit_citrus_grapefruit">Grapefruit</string>
    <string name="ingredient_fruit_berry_strawberry">Strawberry</string>
    <string name="ingredient_fruit_berry_blueberry">Blueberry</string>
    <string name="ingredient_fruit_berry_raspberry">Raspberry</string>
    <string name="ingredient_fruit_berry_blackberry">Blackberry</string>
    <string name="ingredient_fruit_tropical_banana">Banana</string>
    <string name="ingredient_fruit_tropical_mango">Mango</string>
    <string name="ingredient_fruit_tropical_pineapple">Pineapple</string>
    <string name="ingredient_fruit_tropical_papaya">Papaya</string>
    <string name="ingredient_fruit_stone_peach">Peach</string>
    <string name="ingredient_fruit_stone_plum">Plum</string>
    <string name="ingredient_fruit_stone_cherry">Cherry</string>
    <string name="ingredient_fruit_stone_apricot">Apricot</string>
    <string name="ingredient_fruit_melon_watermelon">Watermelon</string>
    <string name="ingredient_fruit_melon_cantaloupe">Cantaloupe</string>
    <string name="ingredient_fruit_melon_honeydew">Honeydew</string>
    <string name="ingredient_seafood_fish_salmon">Salmon</string>
    <string name="ingredient_seafood_fish_tuna">Tuna</string>
    <string name="ingredient_seafood_fish_cod">Cod</string>
    <string name="ingredient_seafood_fish_trout">Trout</string>
    <string name="ingredient_seafood_shellfish_shrimp">Shrimp</string>
    <string name="ingredient_seafood_shellfish_crab">Crab</string>
    <string name="ingredient_seafood_shellfish_lobster">Lobster</string>
    <string name="ingredient_seafood_shellfish_mussels">Mussels</string>
    <string name="ingredient_seafood_cephalopod_squid">Squid</string>
    <string name="ingredient_seafood_cephalopod_octopus">Octopus</string>
    <string name="ingredient_grain_whole_brownRice">Brown rice</string>
    <string name="ingredient_grain_whole_quinoa">Quinoa</string>
    <string name="ingredient_grain_whole_barley">Barley</string>
    <string name="ingredient_grain_whole_oats">Oats</string>
    <string name="ingredient_grain_refined_whiteRice">White rice</string>
    <string name="ingredient_grain_refined_pasta">Pasta</string>
    <string name="ingredient_grain_refined_bread">Bread</string>
    <string name="ingredient_spice_salt">Salt</string>
    <string name="ingredient_spice_pepper">Pepper</string>
    <string name="ingredient_spice_basil">Basil</string>
    <string name="ingredient_spice_thyme">Thyme</string>
    <string name="ingredient_spice_rosemary">Rosemary</string>
    <string name="ingredient_spice_oregano">Oregano</string>
    <string name="ingredient_spice_cumin">Cumin</string>
    <string name="ingredient_spice_paprika">Paprika</string>
    <string name="ingredient_spice_turmeric">Turmeric</string>
    <string name="ingredient_spice_cinnamon">Cinnamon</string>
    <string name="ingredient_spice_mincedGarlic">Minced garlic</string>
    <string name="ingredient_pantryStaple_baking_egg">Egg</string>
    <string name="ingredient_pantryStaple_baking_flour">Flour</string>
    <string name="ingredient_pantryStaple_baking_bakingPowder">Baking powder</string>
    <string name="ingredient_pantryStaple_baking_bakingSoda">Baking soda</string>
    <string name="ingredient_pantryStaple_baking_yeast">Yeast</string>
    <string name="ingredient_pantryStaple_baking_cocoa">Cocoa</string>
    <string name="ingredient_pantryStaple_sweetener_sugar">Sugar</string>
    <string name="ingredient_pantryStaple_sweetener_honey">Honey</string>
    <string name="ingredient_pantryStaple_sweetener_mapleSyrup">Maple syrup</string>
    <string name="ingredient_pantryStaple_sweetener_chocolate">Chocolate</string>
    <string name="ingredient_pantryStaple_oilsAndFats_oliveOil">Olive oil</string>
    <string name="ingredient_pantryStaple_oilsAndFats_sunflowerOil">Sunflower oil</string>
    <string name="ingredient_pantryStaple_oilsAndFats_butter">Butter</string>
    <string name="ingredient_pantryStaple_oilsAndFats_coconutOil">Coconut oil</string>
    <string name="ingredient_pantryStaple_liquids_water">Water</string>
    <string name="ingredient_pantryStaple_liquids_vinegar">Vinegar</string>
    <string name="ingredient_pantryStaple_liquids_soySauce">Soy sauce</string>
    <string name="ingredient_pantryStaple_liquids_broth">Broth</string>
    <string name="utensil_airFryer">Air fryer</string>
    <string name="utensil_blender">Blender</string>
    <string name="utensil_deepFryer">Deep Fryer</string>
    <string name="utensil_grill">Grill</string>
    <string name="utensil_microwave">Microwave</string>
    <string name="utensil_oven">Oven</string>
    <string name="utensil_pan">Pan</string>
    <string name="utensil_pot">Pot</string>
    <string name="utensil_toaster">Toaster</string>
    <string name="utensil_barbecue">Barbecue</string>
    <string name="unnamed_recipe">(UNNAMED RECIPE)</string>
    <string name="write_recipe_save_without_text_dialog_title">Alert</string>
    <string name="write_recipe_save_without_text_dialog_body">The recipe you\'re editing has no legible name or body. Would you like to save it regardless?</string>
    <string name="write_recipe_save_without_text_positive_button_text">Yes, save</string>
    <string name="write_recipe_save_without_text_neutral_button_text">Keep editing</string>
    <string name="recipe_query_max_budget_label">Max budget:</string>
    <string name="recipe_query_min_diners_label">Minimum diners:</string>
</resources>