<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.BiteNote">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/RecipeQueryMaterialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:navigationIconTint="?attr/colorOnPrimary"
                app:title="@string/recipe_query_activity_label"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/RecipeQueryMaxBudgetLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/recipe_query_max_budget_label"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/RecipeQueryMaxBudgetEditText"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="10"

                        android:ems="10"
                        android:hint="@string/budget_edit_text_hint"
                        android:inputType="number"
                        android:textAlignment="viewEnd"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/CurrencyLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/currency_symbol"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/RecipeQueryMinDinersLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/recipe_query_min_diners_label"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/RecipeQueryMinDinersSeekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="9"
                        android:max="9"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/RecipeQueryMinDinersSeekBarProgressTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/PersonImage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:importantForAccessibility="no"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/baseline_person_24"
                        app:tint="@android:color/tertiary_text_light" />
                </LinearLayout>

                <Button
                    android:id="@+id/RecipeQueryEditIngredientsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/edit_recipe_ingredients_button_text" />

                <Button
                    android:id="@+id/RecipeQueryEditUtensilsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/edit_recipe_utensils_button_text" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/RecipeQueryViewQueryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="TODO"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/search_button_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
