<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.BiteNote">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/UtensilQueryMaterialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:navigationIconTint="?attr/colorOnPrimary"
                app:title="@string/utensil_query_activity_label"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/included_utensils_label" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/UtensilQueryIncludedUtensilsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="1" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/banned_utensils_label" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/UtensilQueryBannedUtensilsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="1" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/available_utensils" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/UtensilQueryNonQueriedUtensilsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />
                </LinearLayout>
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/UtensilQuerySaveChangesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="TODO"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/baseline_save_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
